working/kgateway/HTTPRoute_gitea.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: cf-gitea
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https
      namespace: kgateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
      matches:
        - headers:
            - name: Host
              type: RegularExpression
              value: gitea\..*
          path:
            type: PathPrefix
            value: /
